Adjustments in date calculations and additional charges

--- a/billing-generator/src/main/resources/application.properties
+++ b/billing-generator/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Application DB
 primary.datasource.main.driver-class-name=org.postgresql.Driver
-primary.datasource.url=jdbc:postgresql://localhost:5432/infofacturacion?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+primary.datasource.url=jdbc:postgresql://localhost:5432/infofacturaciondev?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 primary.datasource.username=brayanr
 primary.datasource.password=admin
 
