--- a/billing-generator/src/main/resources/application.properties
+++ b/billing-generator/src/main/resources/application.properties
@@ -17,9 +17,9 @@ secondary.datasource.url=jdbc:postgresql://10.20.10.3:5432/faceldiH?useSSL=false
 secondary.datasource.username=brayan.rios
 secondary.datasource.password=br4y4n_r
 #secondary.datasource.main.driver-class-name=org.postgresql.Driver
-#secondary.datasource.url=jdbc:postgresql://10.1.1.3:5432/jorgec_01-09-2021?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#secondary.datasource.username=pgsql
-#secondary.datasource.password=pgsql
+#secondary.datasource.url=jdbc:postgresql://10.1.1.198:5432/brayanr_faceldi?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#secondary.datasource.username=brayan_r
+#secondary.datasource.password=br4y4n_r
 
 secondary.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 secondary.jpa.hibernate.ddl-auto=none
