Join of contract classes and cancellation included

--- a/billing-generator/src/main/resources/application.properties
+++ b/billing-generator/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 primary.datasource.main.driver-class-name=org.postgresql.Driver
 primary.datasource.url=jdbc:postgresql://localhost:5432/infofacturaciondev?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 primary.datasource.username=brayanr
-primary.datasource.password=admin
+primary.datasource.password=br4y4n_r
 
 primary.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 primary.jpa.hibernate.ddl-auto=update
